<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools">

    <TextView
        android:id="@+id/tv_tanda_tangan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tanda_tangan"
        android:layout_centerHorizontal="true"/>

    <com.github.gcacace.signaturepad.views.SignaturePad
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/signature_pad"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        app:penColor="@android:color/holo_blue_dark"
        android:layout_alignParentTop="true"
        />

    <TextView
        android:id="@+id/tv_inspektor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        tools:text="Nama Inspektor"
        android:layout_below="@id/signature_pad"/>

    <LinearLayout
        android:id="@+id/buttons_container"
        android:paddingTop="16dp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/tv_inspektor">

        <Button
            android:id="@+id/btn_hapus"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/hapus"
            android:enabled="false" />

        <Button
            android:id="@+id/btn_simpan"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/simpan"
            android:enabled="false" />
    </LinearLayout>
</RelativeLayout>